# request-normalizer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.md  LICENSE  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: build.yml  deploy.yml
request_normalize/: __init__.py  request_normalize.py
request_normalizer/: __init__.py  request_normalizer.py
tests/: test_deconstruct_url.py  test_generic_url_cleanup.py  test_normalize_fragment.py  test_normalize_host.py  test_normalize_path.py  test_normalize_port.py  test_normalize_query.py  test_normalize_scheme.py  test_normalize_userinfo.py  test_provide_url_scheme.py  test_reconstruct_url.py  test_request_normalize.py  test_request_normalizer.py  test_url_normalize.py
url_normalize/: __init__.py  tools.py  url_normalize.py
