[tool.poetry]
name = "request-normalize"
version = "1.0.0"
description = "HTTP request normalization"
authors = ["Jordan Cook", "Nikolay Panov <github@npanov.com>"]
license = "MIT"
repository = "https://github.com/JWCook/url-normalize"
homepage = "https://github.com/JWCook/url-normalize"
keywords = ['url', 'normalization', 'normalize']
readme = "README.md"

[tool.poetry.urls]
"Changelog" = "https://github.com/JWCook/url-normalize/blob/main/HISTORY.md"
"Issues" = "https://github.com/JWCook/url-normalize/issues"

[tool.poetry.dependencies]
python = "^3.7"
idna = ">=3.3"

[tool.poetry.dev-dependencies]
nox = "^2023.4"
nox-poetry = "^1.0"
pre-commit = ">=2.19"
pytest = ">=7.4"
pytest-cov = ">=4.1"
pytest-socket = ">=0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.xml]
output = 'test-reports/coverage.xml'

[tool.coverage.run]
branch = true
source = ['request_normalize']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
]

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true
known_first_party = ['tests']

[tool.pytest.ini_options]
addopts = "--disable-socket"

[tool.ruff]
format = 'grouped'
line-length = 100
select = ['B', 'C4','C90', 'E', 'F', 'W']

# TODO: Reduce complexity of normalize_path()
[tool.ruff.mccabe]
max-complexity = 11

[tool.bandit]
exclude_dirs = [".nox", "tests"]
